# galgame-creator-GitHub

./: CMakeLists.txt  README.en.md  README.md  main.cpp  傅思敬高级语言程序设计大作业实验报告.docx
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/editors/: charactereditor.cpp  charactereditor.h  dialogueeditdialog.cpp  dialogueeditdialog.h
src/io/: exporter.cpp  exporter.h
src/models/: background.cpp  background.h  bgmtrack.cpp  bgmtrack.h  character.cpp  character.h  dialogue.cpp  dialogue.h  model_test.cpp  project.cpp  project.h
src/player/: player_main.cpp  player_window.cpp  player_window.h
src/view/: gamecanvas.cpp  gamecanvas.h  typewritereffect.cpp  typewritereffect.h
